[package]
name = "crypto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.6.0"
atty = "0.2.14"
base64 = "0.13.0"
bincode = "1.3.3"
block-modes = "0.7.0"
clap = "2.33.3"
eff-wordlist = "1.0.2"
log = "0.4.14"
pretty_env_logger = "0.4.0"
rand = "0.8.3"
serde = "1.0.126"
serde_derive = "1.0.126"
sha2 = "0.9.5"
sqlx = { version = "0.5.1", features = ["runtime-async-std-rustls", "postgres"] }
thiserror = "1.0.24"
